--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'English drama'
+- GITenberg
 tableOfContents: The Spanish tragedy -- Cornelia -- Soliman and Perseda -- Life and
   death of Jack Straw.
 title: A Select Collection of Old English Plays, Volume 05
